Make the scope link mandatory for forms and datasets.
Improve Javadoc.